--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
-	Copyright 2019 Git. Modifying
+	Copyright 2019 Git. Modifying.
+	Adding changes before rebasing conflicts
 -->
 <head>
 	<title>A Great Website</title>
