--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2019 Git. Modifying.
-	Some silly changes from master branch
 -->
 <head>
-	<title>Lots of troubles</title>
+	<title>Lots of trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
