local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Itziar Urbieta 2019</p>
+		<p>&copy; Gitr Training 2019</p>
 	</footer>
 </body>
 </html>
